--- a/assets/deveb/gelistirme/diller/_dil-en.scss
+++ b/assets/deveb/gelistirme/diller/_dil-en.scss
@@ -59,17 +59,17 @@ $yazı-sağda: text-right;
 $yazı-ortada: text-center;
 $yazı-solda: text-left;
 
-$sol: l;
-$sağ: r;
+$sol: f;
+$sağ: h;
 $üst: t;
 $alt: b;
-$solüst: lt;
-$üstsağ: rt;
-$altsağ: rb;
-$solalt: lb;
-$orta: c;
+$solüst: ft;
+$üstsağ: th;
+$altsağ: bh;
+$solalt: fb;
+$orta: g;
 $üstalt: tb;
-$solsağ: lr;
+$solsağ: fh;
 
 /* Durumlama - Kap Örgüsü */
 $gizle: hide;
