--- a/_includes/s1n0/head.html
+++ b/_includes/s1n0/head.html
@@ -3,13 +3,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- AMU -->
-{%- seo -%}
-<!---->
+<!-- 
 {% if page.lang == 'en' %}
 	<link rel="stylesheet" href="{{ "/assets/deveb/gelistirme/deveb-en.css" | relative_url }}">
 {% endif %}
-<link rel="stylesheet" href="{{ "/assets/deveb/gelistirme/deveb.css" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/deveb/gelistirme/deveb.css" | relative_url }}"> 
+-->
+<link rel="stylesheet" href="{{ "/assets/deveb.css/css/deveb.css" | relative_url }}">
 <link rel="stylesheet" href="{{ "/assets/css/imge.css" | relative_url }}">
 
 <!-- Eklenti: Font Awesome -->
