--- a/assets/deveb.css
+++ b/assets/deveb.css
@@ -350,9 +350,10 @@ template {
   }
   [class*="}"] {
     --b1: 0;
-    --i1: 0;
     --o1: 0;
-    --n1: 0;
+  }
+  [class*="})"] {
+    --i: 1;
   }
   [class*="1}"] {
     --b1: 1;
@@ -586,9 +587,10 @@ template {
   }
   [küçük*="}"] {
     --b1: 0;
-    --i1: 0;
     --o1: 0;
-    --n1: 0;
+  }
+  [küçük*="})"] {
+    --i: 1;
   }
   [küçük*="1}"] {
     --b1: 1;
@@ -822,9 +824,10 @@ template {
   }
   [orta*="}"] {
     --b1: 0;
-    --i1: 0;
     --o1: 0;
-    --n1: 0;
+  }
+  [orta*="})"] {
+    --i: 1;
   }
   [orta*="1}"] {
     --b1: 1;
@@ -1058,9 +1061,10 @@ template {
   }
   [büyük*="}"] {
     --b1: 0;
-    --i1: 0;
     --o1: 0;
-    --n1: 0;
+  }
+  [büyük*="})"] {
+    --i: 1;
   }
   [büyük*="1}"] {
     --b1: 1;
@@ -1294,9 +1298,10 @@ template {
   }
   [koca*="}"] {
     --b1: 0;
-    --i1: 0;
     --o1: 0;
-    --n1: 0;
+  }
+  [koca*="})"] {
+    --i: 1;
   }
   [koca*="1}"] {
     --b1: 1;
