--- a/_includes/deveb/bash.html
+++ b/_includes/deveb/bash.html
@@ -10,7 +10,9 @@
 <link href="/assets/fontawesome/css/brands.css" rel="stylesheet">
 <link href="/assets/fontawesome/css/solid.css" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="/assets/deveb.css">
+<link rel="stylesheet" href="/assets/css/syntax.css">
 <link rel="stylesheet" href="/assets/css/kılık.css">
+
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
