--- a/_layouts/deveb/kylavuz.html
+++ b/_layouts/deveb/kylavuz.html
@@ -42,7 +42,7 @@
                 </ul>                
             </omuzluk>
             <dirseklik class="(1/1)">
-                <!-- {% contentblock soldirseklik %} -->
+                <!--  contentblock soldirseklik -->
             </dirseklik>
             <bileklik>
 
