--- a/_layouts/deveb/kylavuz.html
+++ b/_layouts/deveb/kylavuz.html
@@ -28,11 +28,12 @@
                     {% for nesneler in kylavuz %}
                         <li> 
                         <!-- {{nesneler["items"][0].kategori["bölüm"]}} -->
-                            <strong>{{ nesneler["items"][0].kategori["bölüm"] }}</strong>
+                        
+                            <strong>{{nesneler.items.first.kategori.bolum}}</strong>
                             <ul>
-                            {% for nesne in nesneler["items"] %}
+                            {% for nesne in nesneler.items %}
                             <!-- {{nesne.title}} -->
-                                {% if nesne.kategori["alan"] contains "kılavuz" %}                                
+                                {% if nesne.kategori.alan contains "kılavuz" %}                                
                                 <li><a href="{{ nesne.url }}">{{ nesne.title }}</a></li>                                
                                 {% endif %}
                             {% endfor %}
