--- a/_includes/deveb/bashlyk.html
+++ b/_includes/deveb/bashlyk.html
@@ -1,11 +1,7 @@
 <style>
-    damga{
-        font-family: 'Comfortaa', cursive;
-    }
+    
 </style>
 
 <a href="/">
-<damga>
-    deveb
-</damga>
+    <damga>deveb</damga>
 </a>
