--- a/_layouts/deveb/kylavuz.html
+++ b/_layouts/deveb/kylavuz.html
@@ -6,9 +6,7 @@
 </head>
 
 <body class="(1/1)">
-    <tepelik class="(1/1) gizli">
-
-    </tepelik>
+    <!-- <tepelik class="(1/1)"></tepelik> -->
     <başlık class="(1/1)">
         {% include deveb/bashlyk.html %}
     </başlık>
